[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://UI/mainfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/levelsselected.png" type="Texture" id=3]
[ext_resource path="res://UI/menu9patch.png" type="Texture" id=4]
[ext_resource path="res://Player/health.png" type="Texture" id=5]
[ext_resource path="res://Player/pig.png" type="Texture" id=6]
[ext_resource path="res://UI/closebutton.png" type="Texture" id=7]
[ext_resource path="res://UI/levels.png" type="Texture" id=8]
[ext_resource path="res://UI/closebuttonpressed.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.98023e-08, -2.98023e-08 )
texture = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 82.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="Points" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 20.0
margin_right = 82.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "POINTSAAAA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="CanvasLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 128
custom_constants/margin_top = 50
custom_constants/margin_left = 128
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/Popup/MarginContainer"]
margin_left = 128.0
margin_top = 50.0
margin_right = 1152.0
margin_bottom = 670.0
texture = ExtResource( 4 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Popup/CenterContainer"]
margin_left = 624.0
margin_top = 326.0
margin_right = 656.0
margin_bottom = 394.0
custom_constants/separation = 4

[node name="ResumeButton" type="TextureButton" parent="CanvasLayer/Popup/CenterContainer/VBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 3 )

[node name="MainMenuButton" type="TextureButton" parent="CanvasLayer/Popup/CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 3 )

[node name="PauseButton" type="TextureButton" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -20.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 20.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Invincibility" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="CanvasLayer/Popup/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Popup/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseButton" to="." method="_on_PauseButton_pressed"]
